--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -27,7 +27,7 @@
     </LinearLayout>
 
         <LinearLayout
-            android:background="#ffffff"
+            android:background="#ecf0f1"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <!-- What on the top of the button -->
@@ -75,35 +75,24 @@
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="0.4"
-                                android:layout_gravity="center_vertical"
+                                android:textAlignment="viewEnd"
+                                android:layout_marginRight="20dp"
+                                android:textColor="#212121"
                                 android:textSize="25sp"
-                                android:textColor="#FF3D00"
-                                android:text="-20%"/>
+                                android:text="$4.00"/>
 
                         </LinearLayout>
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
+
+
+                        <TextView
+                            android:id="@+id/unit_price"
+                            android:textSize="15sp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal">
+                            android:text="Unit Price: $1.25"/>
 
-                            <TextView
-                                android:id="@+id/amount_of_item"
-                                android:layout_marginStart="5dp"
-                                android:textSize="15sp"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="qnty: 2"/>
-
-
-                            <TextView
-                                android:id="@+id/unit_price"
-                                android:textSize="15sp"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Unit Price: $1.25"/>
-
-                        </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -114,14 +103,14 @@
                                 android:id="@+id/total_price_of_item"
                                 android:padding="5dp"
                                 android:layout_marginStart="5dp"
-                                android:textSize="20sp"
+                                android:textSize="15sp"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="0.5"
-                                android:textColor="#212121"
-                                android:text="$4.25"/>
+                                android:text="Quantity: 2"/>
 
                             <Button
+                                android:id="@+id/list_item_edit_button"
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="0.5"
