--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -65,13 +65,14 @@
                                 android:textColor="#212121"
                                 android:textSize="25sp"
                                 android:padding="5dp"
+                                android:layout_gravity="center_vertical"
                                 android:layout_marginStart="5dp"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="0.6"/>
 
                             <TextView
-                                android:id="@+id/discount_percent"
+                                android:id="@+id/total_price"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="0.4"
@@ -100,7 +101,7 @@
                             android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/total_price_of_item"
+                                android:id="@+id/total_amount_of_item"
                                 android:padding="5dp"
                                 android:layout_marginStart="5dp"
                                 android:textSize="15sp"
@@ -125,10 +126,11 @@
                     </LinearLayout>
 
                     <ImageView
+                        android:id="@+id/item_image"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="0.3"
-                        android:background="#00B0FF"/>
+                        android:background="#fff"/>
 
                 </LinearLayout>
 
